unit test refactored